[package]
name = "adventofcode2020"
version = "0.1.0"
authors = ["OrangeBacon <computer.backup.15@gmail.com>"]
edition = "2018"
publish = false
build = "build.rs"

[dependencies]
clap = "~2.33"
strfmt = "0.1.6"
regex = "1"
hashbrown = "0.9"
anyhow = "1"
itertools = "0.9"
linkme = "0.2"
bitvec = "0.19"
libaoc = {path = "libaoc"}

[build-dependencies]
vergen = "3"

[workspace]
members = [
    "libaoc",
    "libaoc/aoc_attr"
]
